feat: add oh-my-opencode submodule for reference
The 'oh-my-opencode' repository provides a collection of helpful
references and community guidelines.

Adding it as a submodule allows the project to track a specific
version of these resources, making them easily accessible and
updatable without including the entire repository history.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".references/opencode"]
 	path = .references/opencode
 	url = https://github.com/anomalyco/opencode.git
+[submodule ".references/oh-my-opencode"]
+	path = .references/oh-my-opencode
+	url = https://github.com/code-yeongyu/oh-my-opencode.git
