--- a/package.json
+++ b/package.json
@@ -1,15 +1,46 @@
 {
-  "name": "ring-opencode-plugins",
+  "name": "ring-opencode",
   "version": "1.0.0",
-  "description": "Ring plugins for OpenCode - context injection, state management, and workflow automation",
+  "description": "Ring skills library for OpenCode - enforces proven software engineering practices",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "bin": {
+    "ring": "./dist/cli/index.js"
+  },
+  "files": [
+    "dist",
+    "assets"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./schema.json": "./assets/ring-opencode.schema.json"
+  },
+  "scripts": {
+    "build": "bun build src/index.ts --outdir dist --target bun --format esm && tsc --emitDeclarationOnly && bun build src/cli/index.ts --outdir dist/cli --target bun --format esm && bun run build:schema",
+    "build:schema": "bun run script/build-schema.ts",
+    "clean": "rm -rf dist",
+    "prepublishOnly": "bun run clean && bun run build",
+    "typecheck": "tsc --noEmit",
+    "test": "bun test",
+    "test:plugin": "bun test plugin/"
+  },
   "dependencies": {
+    "@clack/prompts": "^0.11.0",
     "@opencode-ai/plugin": "1.1.3",
-    "better-sqlite3": "12.6.0"
+    "better-sqlite3": "12.6.0",
+    "commander": "^14.0.2",
+    "jsonc-parser": "^3.3.1",
+    "picocolors": "^1.1.1",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/better-sqlite3": "7.6.13",
     "@types/node": "22.19.5",
+    "bun-types": "latest",
     "typescript": "5.9.3"
   }
 }
