--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "prepublishOnly": "bun run clean && bun run build",
     "typecheck": "tsc --noEmit",
     "test": "bun test",
-    "test:plugin": "bun test plugin/"
+    "test:plugin": "bun test plugin/",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write ."
   },
   "dependencies": {
     "@clack/prompts": "^0.11.0",
@@ -38,6 +41,7 @@
     "zod": "^4.1.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
     "@types/better-sqlite3": "7.6.13",
     "@types/node": "22.19.5",
     "bun-types": "latest",
