feat(plugin): enhance agent/command configuration and add security hardening
This commit introduces significant enhancements to the plugin system,
focusing on increased configurability for agents and commands, new
template capabilities, and critical security hardening.

Configuration & Features:
- Extends agent frontmatter with `top_p`, `hidden`, `disable`, and generic
 `options` for provider-specific settings.
- Adds file content injection (`@filepath`) and shell command output
 injection (`` !`command` ``) to command templates.
- Implements backward-compatible aliases in the config schema, mapping
 `agents` to `agent` and `permissions` to `permission` for a smoother
 user transition.

Security & Robustness:
- Hardens `deepMerge` against prototype pollution attacks.
- Strengthens agent, command, and skill loaders to ignore malicious
 filenames like `__proto__` and `constructor`.
- Prevents path traversal by validating that symlinked ledger files
 resolve within the project root.
- Sanitizes arguments for `notify-send` and `osascript` to prevent
 command injection in system notifications.

Testing:
- Adds an extensive suite of tests covering concurrency, config loading,
 lifecycle events, and the new security measures.
- Relocates plugin tests to `__tests__/plugin/` and updates the `test:plugin`
 npm script accordingly.

Docs:
- Updates `OPENCODE_PLUGIN_ARCH.md` with detailed references and examples
 for all new agent, command, and skill configuration options.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".references/oh-my-opencode"]
 	path = .references/oh-my-opencode
 	url = https://github.com/code-yeongyu/oh-my-opencode.git
+[submodule ".references/orchestra"]
+	path = .references/orchestra
+	url = https://github.com/0xSero/orchestra.git
