--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prepublishOnly": "bun run clean && bun run build",
     "typecheck": "tsc --noEmit && tsc -p plugin/tsconfig.json --noEmit",
     "test": "bun test",
-    "test:plugin": "bun test plugin/",
+    "test:plugin": "bun test __tests__/plugin/",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write ."
