--- a/ring.jsonc
+++ b/ring.jsonc
@@ -43,6 +43,69 @@
     "aggressiveTruncation": false
   },
 
+  // Orchestrator configuration (workers, workflows).
+  "orchestrator": {
+    // Base port for worker processes.
+    "basePort": 14096,
+
+    // Automatically spawn workers when needed.
+    "autoSpawn": true,
+
+    // Worker startup timeout in ms.
+    "startupTimeout": 30000,
+
+    "ui": {
+      // Show toast notifications for worker events.
+      "toasts": true,
+
+      // Inject worker summaries into the system prompt.
+      "injectSystemContext": true,
+
+      // Max workers summarized in system context.
+      "systemContextMaxWorkers": 12,
+
+      // Default output format for task_list (markdown | json).
+      "defaultListFormat": "markdown",
+
+      // Enable orchestrator debug logging.
+      "debug": false
+    },
+
+    // Custom worker profiles (merged with built-ins).
+    // Each entry can be a string (profile id) or a full profile object.
+    "profiles": [],
+
+    // Workers to spawn on startup (by id or full profile object).
+    "workers": [],
+
+    "workflows": {
+      // Enable workflow execution engine.
+      "enabled": true,
+
+      "limits": {
+        // Max number of steps per workflow run.
+        "maxSteps": 4,
+
+        // Max size of task payload sent to a worker.
+        "maxTaskChars": 12000,
+
+        // Max size of carry-forward context between steps.
+        "maxCarryChars": 24000,
+
+        // Timeout per workflow step in ms.
+        "perStepTimeoutMs": 120000
+      }
+    },
+
+    "security": {
+      // Prevent workers from recursively spawning more workers.
+      "preventRecursiveSpawn": true,
+
+      // Env var set in worker processes to block recursive spawn.
+      "recursiveSpawnEnvVar": "RING_ORCHESTRATOR_WORKER"
+    }
+  },
+
   // Hook-specific overrides keyed by hook name.
   "hooks": {}
 }
